fix: main background stretch

--- a/sass/layouts/_main.scss
+++ b/sass/layouts/_main.scss
@@ -2,6 +2,7 @@
     background: url('../img/backgrounds/Giant_Panda.jpg');
     background-repeat: no-repeat;
     background-position: center -80px;
+    background-size: 100%;
 
     &__content {
         position: relative;
